--- a/NUCLEO-H745ZI-Q/README
+++ b/NUCLEO-H745ZI-Q/README
@@ -5,13 +5,17 @@ which is a development board for
 
 STM32H745ZIT6U
 
-So far I have not figured out the dual core thing, seems to me the
-cortex-m7 is running but not the m4
-
 The cortex-m7 cpuid is not as documented.
 
-0xe000ed00: 411fc271
+0x411FC271   cortex-m7 cpuid
+0x410FC241   cortex-m4 cpuid
 
 User LD1: a green user LED is connected to the STM32H7 I/O PB0 (or PA5)
 User LD2: a yellow user LED is connected to PE1
 User LD3: a red user LED is connected to PB14
+
+the cortex-m7 boots at 0x08000000 or bank0
+the cortex-m4 boots at 0x08100000 or bank1
+
+by default.  there are multiple srams so easy to isolate their stacks
+and such.
