--- a/NUCLEO-H745ZI-Q/blinker01/README
+++ b/NUCLEO-H745ZI-Q/blinker01/README
@@ -2,5 +2,6 @@
 See the previous level README for schematic and programmers reference
 information.
 
-I think so far the m7 is running not the m4.
+This runs on the m7
+
 This example blinks the (red) led on PB14
